css/style.css
html, body{
    margin: 0%;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
}

/* CSS variables */
:root {
    --primary-color: #4458dc;
    --primary-color2: #854fee;
    --title-color: #141313;
    --text-color: #777777;
    --border-color: #201f1f17;
    --gradient-color: linear-gradient(90deg, #4458dc 0%, #854fee 100%);
    --shadow-color: 0px 10px 30px rgba(118,85,225,0.3);
    --box-shadow: 0px 10px 30px rgba(57,56,61,0.205);

    /* font family variables */
    --roboto: 'Roboto', sans-serif;
}

@keyframes slideInFromLeft {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(0);
    }
}
@keyframes slideInFromRight {
    0% {
        transform: translateX(100%);
    }
    100% {
        transform: translateX(0);
    }
}
@keyframes slideInFromTop {
    0% {
        transform: translateY(100%);
    }
    100% {
        transform: translateX(0);
    }
}
@keyframes slideInFromBottom {
    0% {
        transform: translateY(100%);
    }
    100% {
        transform: translateX(0);
    }
}
/* Global variables */
.title-text{
    font: normal bold 50px var(--roboto);
}

.hide{
	display: none;
}

.text-uppercase{
    text-transform: uppercase;
}

button:focus,
button:active
button:hover
.btn:active,
.btn.active{
    outline: 0px !important;
    box-shadow: none !important;
}

/* Buttons */
.button{
    padding: .8rem 2.2rem;
    font: normal 550 18px/20px var(--roboto);
    position: relative;
    border-width: 2px;
}

/* Fonts */
@font-face {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 500;
    src: url(./fonts/Roboto-Medium.ttf);
}
  
/* Navigation */
.navbar_fixed{
    position: fixed;
    width: 100%;
    top: -1px;
    left: 0; right: 0;
    background: #ffffff;
    box-shadow: var(--box-shadow);
    z-index: 999;
    transition: background 1s ease;
}
/* .header_area .main-menu .navbar{
    background: linear-gradient(#000000, #ffffff)
} */

/* Change navbar for medium screens */
@media screen and (max-width: 767px){
    .header_area .main-menu .navbar,
    .header_area .main-menu .navbar .navbar-brand-collapsed {
        padding-left: 5rem;
        margin: 0%;
    }
    .header_area .main-menu .navbar .navbar-brand-collapsed img{
        height: 3.5rem;
        padding: 2%;
        margin: 0%;
    }
    .header_area .main-menu .navbar .navbar-nav .navbar-brand img{
        margin: 0;
        padding: 0;
        display: none;
    }
} 
@media (min-width: 768px){
    .header_area .main-menu .navbar .navbar-nav .navbar-brand {
        margin-left: 7rem;
        margin-right: 6rem;
        transform: translateX(-50%);
        left: 50%;   
    }
    .header_area .main-menu .navbar .navbar-nav .navbar-brand img{
        height: 3.5rem;
        transform: translateX(-50%);
        left: 50%;
        position: absolute;
    }
    .header_area .main-menu .navbar .navbar-brand-collapsed img {
        display: none;
    }
}
.header_area .main-menu .navbar{
    align-content: center;
    padding: 1rem;
}

.header_area .main-menu .nav-item .nav-link{
    font-family: var(--roboto);
    text-transform: uppercase;
    white-space: nowrap;
    font-weight: 550;
    font-size: 1.5rem;
    padding: 1rem;
    color: var(--title-color);
    transition: 0.5s;
}

.header_area .main-menu .navbar-nav .active a{
    background: var(--gradient-color);
    -webkit-background-clip: text;
    background-clip: text;
}

.header_area .main-menu .navbar-nav a:hover{
    color: var(--primary-color);
}
/* End Navigation */

/* Banner Area */
.main .banner {
   background: url(../img/banner-background.png) no-repeat;
   background-position: 100% 50%;
   background-size:65%;
}
.main .banner .title {
    text-align: center;
}
/* Scale down title font for smaller screens */
@media screen and (min-device-width: 768px) {
    .main .banner .title h1{
        margin-top: 5%;
        padding-top: 10%;
        font-size: 10rem;
        font-weight: 400;
        line-height: 10rem;
    }
    .main .banner .title h3{
        font-size: 2.5rem;
        padding-top: 2rem;
        font-weight: 500;
    }
}

@media screen and (max-device-width: 767px) {
    .main .banner .title h1{
        font-size: 22vw;
        font-weight: 400;
    }
    .main .banner .title h3{
        font-size: 6vw;
        padding-top: 1rem;
        font-weight: 500;
    }
}

.main .banner .title .buttons{
    padding: 2rem;
}

/* Turn on lines only for large screens */
@media screen and (min-device-width: 1080px) {
    .main .banner .title .buttons .flex-row::before{
        content: "";
        height: 2px;
        width: 12rem;
        background: black;
        display: inline-block;
        transform: translateY(-3px);
    }
    .main .banner .title .buttons .flex-row::after{
        content: "";
        height: 2px;
        width: 12rem;
        background: black;
        display: inline-block;
        transform: translateY(-3px);
    }
}

.main .banner .terminal {
    margin: 1rem 1.5rem 1.5rem 1.5rem;
    height: 15rem;
    border: thick solid;
    border-image-slice: 1;
    border-image-source: linear-gradient(to right, #743ad5, #d53a3a);
}
/* End Banner Area */

/* Start About Area */

.main .about-area img{
    animation: slideInFromLeft 0.5s ease-in;
    width: 30rem;
}
.main .about-area .card{
    animation: slideInFromRight 0.5s ease-in;
    margin-top: 3rem;
    text-align: center;
}
@media screen and (min-device-width: 536px) {
    .main .about-area{
        text-align: center;
        padding-top: 10rem;
        padding-bottom: 10rem;
    }
    .main .about-area .card-header{
        font-weight: 550;
        font-size: 4rem;
    }
    .main .about-area .card h5{
        font-size: 1.7rem;
        font-weight: 400;
    }
}

@media screen and (max-device-width: 535px) {
    .main .about-area{
        text-align: center;
        padding-top: 5rem;
        padding-bottom: 5rem;
    }
    .main .about-area .card-header{
        font-weight: 550;
        font-size: 14vw;
    }
    .main .about-area .card h5{
        font-size: 6vw;
        font-weight: 400;
    }
}

/* End About Area */

/* Start Project Area */
@media screen and (min-device-width: 536px) {
    .main .project-area h1{
        font-size: 4rem;
        padding-bottom: 1rem;
    }
}

@media screen and (max-device-width: 535px) {
    .main .project-area h1{
        font-size: 14vw;
        padding-bottom: 1rem;
    }
}
.main .project-area{
    padding-top: 4rem;
}

.main .project-area .button-group{
    margin-top: 1rem;
    margin-bottom: 2rem;
}

.main .project-area .button-group .active{
    background-color: #43caff;
    color: white;
    transition: 0.5s;
}

.main .project-area .button-group button{
    background: transparent;
    border: none;
    font: normal 550 24px/24px var(--roboto);
    padding: 1rem;
    text-transform: uppercase;
}

.main .project-area .button-group button:hover{
    color: var(--primary-color);
    transition: 0.5s;
}

.main .project-area .grid .our-project > .title h4{
    font: normal 700 25px/25px var(--roboto);
}
@media screen and (min-device-width: 1201px) {
    .main .project-area .grid .our-project a img{
        max-width: 22rem;
    }
}

@media screen and (max-device-width: 1200px) {
    .main .project-area .grid .our-project a img{
        max-width: 19rem;
    }
}

.main .project-area .grid .our-project a img:hover{
    filter: brightness(1.05) drop-shadow(0px 0px 10px #ababab);
    transition: 0.5s;
}

.main .project-area .grid .our-project .modal .modal-dialog .modal-content .modal-header h5{
    font: normal 700 25px/25px var(--roboto);
}
.modal .btn {
    font-weight: 500;
}
.modal p,
.modal h3{
    margin: 1rem 1rem 0 1rem;
}

.modal .list{
    margin-left: 1rem;
}

.modal .carousel{
    margin: 1rem 0;
}
.modal .carousel img{
    max-height: 27rem;
}

.modal .carousel-control-prev, 
.modal  .carousel-control-next{
    opacity: .9;
    top: 50%;
    bottom: 50%;
}

.modal .carousel-control-prev:hover, 
.modal  .carousel-control-next:hover{
    opacity: 1;
}

.imgWrapper {
    text-align: center;
    margin: 1rem 0;
}
.imgWrapper img{
    width: 100%;
    max-width: 30rem;
}

.videoWrapper {
    position: relative;
    margin: 1rem 0;
    padding-bottom: 56.25%; /* 16:9 */
    height: 0;
}

.videoWrapper iframe {
position: absolute;
top: 0;
left: 0;
width: 100%;
height: 100%;
}

.button-row {
    margin-top: 1rem;
    text-align: center;
}

/* End Project Area */

/* Start Contact Area */

.socials{
    list-style-type: none;
    margin-top: 0;
    padding: 0;
}

.contact-area .contact-image {
    text-align: center;
}
/* Scale down images for smaller screens */
@media screen and (min-device-width: 536px) {
    .contact-area .contact-title{
        padding-top: 4rem;
        font-size: 4rem;
        margin-bottom: 2rem;
    }
    .contact-area .contact-text{
        font-size: 1.8rem;
        font-weight: 400;
    }
    .contact-area .contact-image img{
        width: 20rem;
    }
    .socials li a {
        white-space: nowrap;
        line-height: 75px;
        display: block;
        text-decoration: none;
        font-size: 18px;
        font-size: 1.8rem;
    }
    .socials img{
        width: 60px;
    }
}

@media screen and (max-device-width: 535px) {
    .contact-area .contact-title{
        padding-top: 4rem;
        font-size: 14vw;
        margin-bottom: 1rem;
    }
    .contact-area .contact-text{
        font-size: 7vw;
        font-weight: 400;
    }
    .contact-area .contact-image img{
        width: 17rem;
    }
    .socials li a {
        line-height: 60px;
        display: block;
        text-decoration: none;
        font-size: 6vw;
    }
    .socials li a.email {
        line-height: 45px;
    }
    .socials img{
        width: 45px;
    }
}

.socials li a.email {
    color: #e3133d;
}
.socials li a.email:hover {
    filter: brightness(1.1) drop-shadow(5px 0px 5px #e3133d80);
    transition: 0.3s;
}
.socials li a.github {
    color:#171516;
}
.socials li a.github:hover {
    filter: brightness(1.1) drop-shadow(5px 0px 5px #17151680);
    transition: 0.3s;
}
.socials li a.devpost {
    color:#003e54;
}
.socials li a.devpost:hover {
    filter: brightness(1.1) drop-shadow(5px 0px 5px #003e5480);
    transition: 0.3s;
}
.socials li a.linkedin {
    color: #0982c0;
}
.socials li a.linkedin:hover {
    filter: brightness(1.1) drop-shadow(5px 0px 5px #0982c080);
    transition: 0.3s;
}
/* End Contact Area */

/* Start Footer Area */
footer.footer-area{
    margin-top: 2rem;
    background: linear-gradient(#06aefc70, #0685fc)
    /* background-color: #0685fc; */
}


/* Scale down font for smaller screens */
@media screen and (min-device-width: 536px) {
    footer.footer-area h1{
        padding-top: 2rem;
        white-space: nowrap;
        font-weight: 500;
        font-size: 1.3rem;
        color: white;
    }
}

@media screen and (max-device-width: 535px) {
    footer.footer-area h1{
        padding-top: 2rem;
        white-space: nowrap;
        font-weight: 500;
        font-size: 4vw;
        color: white;
    }
}
footer.footer-area .logo img{
    margin-top: 1rem;
    margin-bottom: 1rem;
    height: 3.5rem;
}
footer.footer-area .top-button{
    margin-top: 1.7rem;
}
footer.footer-area .top-button .scroll-top{
    background: linear-gradient(45deg, #743ad5, #f03333);
    filter:opacity(0.75);
    padding: 0.7rem;
    border-radius: 10px;
    transition: all 0.3s ease;
}
footer.footer-area .scroll-top i{
    color: #fff;
    margin: 0;
    position: relative;
    top: 0.5rem;
    font-size: 25px;
    transition: all 0.3s ease;
}
footer.footer-area .scroll-top:hover {
    filter:opacity(1);
}
footer.footer-area .scroll-top:hover  i{
    color: #fff;
    top: 0.15rem;
}
/* End Footer Area */

